--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,5 +10,11 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
- *= require_self
+ *= require flaticon
+ *= require animate
+ *= require color_main
+ *= require custom_main
+ *= require bootsnav
+ *= require color
+ *= require custom
  */
