--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -3,7 +3,7 @@
 <% provide :big_banner, t("show_order_banner") %>
 <div class="row note_order">
   <button class="btn btn-primary create_order_button">
-    <%= link_to t("create_order"), new_order_path %>
+    <%= link_to t("create_reservation"), new_order_path %>
   </button>
 </div>
 <div class="row list_table order_list">
