--- a/app/assets/stylesheets/custom_main.scss
+++ b/app/assets/stylesheets/custom_main.scss
@@ -470,3 +470,27 @@ input {
   height: 100%;
   width: 100%;
 }
+
+.edit-order-detail-top-row{
+  text-align: center;
+  a{
+    button{
+      margin: 10px;
+    }
+  }
+}
+
+.total-amount{
+  text-align: center;
+  color: $black;
+}
+
+input[type=number]{
+  text-align: center;
+  border-radius: 5px;
+}
+
+.edit-oder-show-row{
+  width: 50%;
+  text-align: center;
+}
