--- a/app/assets/stylesheets/color_main.scss
+++ b/app/assets/stylesheets/color_main.scss
@@ -23,3 +23,11 @@ $aquamarine: aquamarine;
 $darkred: darkred;
 $yellow: yellow;
 $dark-white: #454545;
+$alert-background: #dff0d8;
+$alert-border: #d6e9c6;
+$alert-notice: #3c763d;
+$green: green;
+$alert-alert-background: #f2dede;
+$alert-alert-border: #ebccd1;
+$alert-alert-color: #a94442;
+$light-blue: #0099ff;
