--- a/app/views/admin/products/show.html.erb
+++ b/app/views/admin/products/show.html.erb
@@ -12,7 +12,7 @@
         <li class="breadcrumb-item">
           <%= link_to t("list_product_title"), admin_products_path %>
         </li>
-        <li class="breadcrumb-item active">t<%= "show_product_title" %></li>
+        <li class="breadcrumb-item active"><%= t "show_product_title" %></li>
       </ol>
     </div>
   </div>
