--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-default bootsnav no-background navbar-fixed black">
+    <nav class="navbar bootsnav no-background navbar-fixed black">
       <%= render "layouts/nav" %>
     </nav>
 
